# VideoScribe

./: .env.example  .gitignore  README.md  build_portable.ps1  package-lock.json  package.json
src/: App.tsx  SettingsWindow.tsx  index.css
src-backend/: build_dict.py  main.py  pyproject.toml  videoscribe-backend.spec
src-backend/videoscribe/: worker.py
src-backend/videoscribe/application/: __init__.py  pipeline.py  transcription_job.py
src-backend/videoscribe/domain/: cancellation.py  interfaces.py  ipc_models.py  models.py  transcription_options.py
src-backend/videoscribe/infrastructure/: utils.py
src-backend/videoscribe/infrastructure/audio/: __init__.py  ffmpeg_analyzer.py  mss_factory.py
src-backend/videoscribe/infrastructure/audio/alignment/: ctc_aligner_engine.py  factory.py
src-backend/videoscribe/infrastructure/audio/mss/: audio_separator_engine.py
src-backend/videoscribe/infrastructure/audio/vad/: __init__.py  custom_analyzer.py  factory.py  firered_analyzer.py  native_analyzer.py  silero_v6_analyzer.py
src-backend/videoscribe/infrastructure/recognizers/: __init__.py  faster_whisper_engine.py
src-backend/videoscribe/infrastructure/reporters/: __init__.py  ipc_reporter.py  ndjson_reporter.py
src-backend/videoscribe/stt/: engine.py  models.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dictionary.rs  lib.rs  main.rs
src/hooks/: useAppEvents.ts  useSettingChange.ts
src/services/: sttService.ts  subtitleIOService.ts  translationService.ts
src/store/: sttJobStore.ts  sttStore.ts  (+2 more)
(+91 files in other folders)
